# Encryptallinator

./: README.md  index.html  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: cross-platform-build.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  lib.rs  main.rs
