[package]
name = "encryptallinator"
version = "0.1.0"
description = "A desktop app for encrypting files and folders with AES encryption."
authors = ["Encryptallinator"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "encryptallinator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.8.5"
tar = "0.4.44"
thiserror = "2.0.17"
walkdir = "2.5.0"

